x86/include/TestEngineAPI_05.vb

    <DllImport("TestEngine.dll", EntryPoint:="tePsRead", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function tePsRead (ByVal handle As UInteger, ByVal keyId As UInteger, ByVal valueLen As UShort, ByVal value() As UShort, ByRef readLen As UShort) As Integer
    End Function
    <DllImport("TestEngine.dll", EntryPoint:="tePsWrite", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function tePsWrite (ByVal handle As UInteger, ByVal keyId As UInteger, ByVal valueLen As UShort, ByVal value() As UShort) As Integer
    End Function
    <DllImport("TestEngine.dll", EntryPoint:="tePsAudioRead", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function tePsAudioRead (ByVal handle As UInteger, ByVal keyId As UInteger, ByVal valueLen As UShort, ByVal value() As UShort, ByRef readLen As UShort) As Integer
    End Function
    <DllImport("TestEngine.dll", EntryPoint:="tePsAudioWrite", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function tePsAudioWrite (ByVal handle As UInteger, ByVal keyId As UInteger, ByVal valueLen As UShort, ByVal value() As UShort) As Integer
    End Function
    <DllImport("TestEngine.dll", EntryPoint:="teRadGetMaxPayloadLen", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function teRadGetMaxPayloadLen (ByVal pktType As Byte, ByRef maxLen As UShort) As Integer
    End Function
    <DllImport("TestEngine.dll", EntryPoint:="teRadQhsStart", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function teRadQhsStart (ByVal handle As UInteger, ByVal testMode As Byte, ByVal channel As Byte, ByVal payloadLen As UShort, ByVal payload As Byte, ByVal phyRate As Byte, ByVal txPower As Byte, ByVal maxPackets As UShort, ByVal cteLen As Byte, ByVal cteType As Byte, ByVal slotDuration As Byte, ByVal numAntennae As Byte, ByVal antennaIds() As Byte) As Integer
    End Function
    <DllImport("TestEngine.dll", EntryPoint:="teRadRxContStart", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function teRadRxContStart (ByVal handle As UInteger, ByVal techType As Byte, ByVal channel As Byte, ByVal swGain As Byte, ByVal lePhy As Byte) As Integer
    End Function
    <DllImport("TestEngine.dll", EntryPoint:="teRadRxGetRssi", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function teRadRxGetRssi (ByVal handle As UInteger, ByVal techType As Byte, ByVal channel As Byte, ByVal numSamples As Byte, ByRef rssi As SByte) As Integer
    End Function
    <DllImport("TestEngine.dll", EntryPoint:="teRadRxGetStats", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function teRadRxGetStats (ByVal handle As UInteger, ByRef pktLen As UShort, ByVal pktsRxd() As UInteger, ByVal acErrs() As UInteger, ByVal hecErrs() As UInteger, ByVal crcErrs() As UInteger, ByVal totalBitErrs() As UInteger, ByVal rssi() As Short, ByRef reserved As UInteger) As Integer
    End Function
    <DllImport("TestEngine.dll", EntryPoint:="teRadRxPktCfg", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function teRadRxPktCfg (ByVal handle As UInteger, ByVal numPkts As UShort) As Integer
    End Function
    <DllImport("TestEngine.dll", EntryPoint:="teRadRxPktStart", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function teRadRxPktStart (ByVal handle As UInteger, ByVal channels() As Byte, ByVal payload As Byte, ByVal pktType As Byte, ByVal bdAddr As String, ByVal hopMode As Byte, ByVal pktLen As UShort, ByVal ltAddr As Byte, ByVal reserved As UInteger) As Integer
    End Function
    <DllImport("TestEngine.dll", EntryPoint:="teRadStop", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function teRadStop (ByVal handle As UInteger) As Integer
    End Function
    <DllImport("TestEngine.dll", EntryPoint:="teRadTxContStart", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function teRadTxContStart (ByVal handle As UInteger, ByVal channel As Byte, ByVal power As Byte, ByVal transmitType As Byte, ByVal patternLen As Byte, ByVal bitPattern As UInteger) As Integer
    End Function
    <DllImport("TestEngine.dll", EntryPoint:="teRadTxCwStart", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function teRadTxCwStart (ByVal handle As UInteger, ByVal channel As Byte, ByVal power As Byte) As Integer
    End Function
    <DllImport("TestEngine.dll", EntryPoint:="teRadTxPktStart", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function teRadTxPktStart (ByVal handle As UInteger, ByVal channels() As Byte, ByVal payload As Byte, ByVal pktType As Byte, ByVal power As Byte, ByVal bdAddr As String, ByVal hopMode As Byte, ByVal pktLen As UShort, ByVal ltAddr As Byte, ByVal reserved As UInteger) As Integer
    End Function
    <DllImport("TestEngine.dll", EntryPoint:="teRadLeTxBurst", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function teRadLeTxBurst (ByVal handle As UInteger, ByVal hopMode As Byte, ByVal payloadLen As UShort, ByVal payloadType As Byte, ByVal pktType As Byte, ByVal power As Byte) As Integer
    End Function
    <DllImport("TestEngine.dll", EntryPoint:="teRadTxEnhanced", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function teRadTxEnhanced (ByVal handle As UInteger, ByVal channel As Byte, ByVal pktType As Byte, ByVal payloadLen As UShort, ByVal payloadType As Byte, ByVal payloadPattern As UInteger, ByVal transmitType As Byte, ByVal ltAddr As Byte, ByVal hopping As Byte, ByVal bdAddr As String, ByVal maxPkts As UInteger, ByVal offSlots As Byte, ByVal power As Byte) As Integer
    End Function
    <DllImport("TestEngine.dll", EntryPoint:="teRadRxEnhanced", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function teRadRxEnhanced (ByVal handle As UInteger, ByVal channel As Byte, ByVal pktType As Byte, ByVal payloadLen As UShort, ByVal payloadType As Byte, ByVal payloadPattern As UInteger, ByVal receiveType As Byte, ByVal ltAddr As Byte, ByVal hopping As Byte, ByVal bdAddr As String, ByVal maxPkts As UInteger, ByVal offSlots As Byte, ByVal rxSwGain As Byte) As Integer
    End Function
    <DllImport("TestEngine.dll", EntryPoint:="teRadRxGetStatsEnhanced", _
    CharSet:=CharSet.Ansi, CallingConvention:=CallingConvention.StdCall)> _
    Function teRadRxGetStatsEnhanced (ByVal handle As UInteger, ByRef pktsRxd As UInteger, ByRef acErrs As UInteger, ByRef hecErrs As UInteger, ByRef crcErrs As UInteger, ByRef totalBitErrs As UInteger, ByRef rssi As Short, ByRef reserved As UInteger) As Integer
    End Function

' DEPRECATED FUNCTIONS
Declare Function bccmdPsuBuckReg Lib "TestEngine.dll" Alias "bccmdPsuSmpsEnable" (ByVal handle As UInteger, ByVal reg As UShort) As Integer
Declare Function bccmdPsuMicEn Lib "TestEngine.dll" Alias "bccmdPsuHvLinearEnable" (ByVal handle As UInteger, ByVal reg As UShort) As Integer
Declare Function bccmdLed0 Lib "TestEngine.dll" Alias "bccmdLed0Enable" (ByVal handle As UInteger, ByVal state As UShort) As Integer
Declare Function bccmdLed1 Lib "TestEngine.dll" Alias "bccmdLed1Enable" (ByVal handle As UInteger, ByVal state As UShort) As Integer
Declare Function bccmdChargerSupressLed0 Lib "TestEngine.dll" Alias "bccmdChargerSuppressLed0" (ByVal handle As UInteger, ByVal state As UShort) As Integer
Declare Function openTestEngineSpi Lib "TestEngine.dll" Alias "openTestEngineDebug" (ByVal port As Integer, ByVal multi As Integer, ByVal transport As Integer) As UInteger
Declare Function openTestEngineSpiTrans Lib "TestEngine.dll" Alias "openTestEngineDebugTrans" (ByVal trans As String, ByVal multi As Integer) As UInteger
Declare Function openTestEngineSpiUnlock Lib "TestEngine.dll" Alias "openTestEngineDebugUnlock" (ByVal port As Integer, ByVal multi As Integer, ByVal transport As Integer, ByVal unlockKey As String) As UInteger
Declare Function openTestEngineSpiUnlockTrans Lib "TestEngine.dll" Alias "openTestEngineDebugUnlockTrans" (ByVal trans As String, ByVal multi As Integer, ByVal unlockKey As String) As UInteger
Declare Function teGetAvailableSpiPorts Lib "TestEngine.dll" Alias "teGetAvailableDebugPorts" (ByRef maxLen As UShort, ByVal ports As StringBuilder, ByVal trans As StringBuilder, ByRef count As UShort) As Integer
End Module


